# organism

./: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.dev/: progress.md  state.json  synthesis.md
organism/: __init__.py  agent.py  config.py  env.py  evo_genetics.py  evolution.py  session.py  train.py  ui.py  web.py
scripts/: fetch_checkpoint.ps1  launch_training.ps1  onstart.sh  run-v14.sh  run-v15.sh  run-v16.sh  run-v17.sh  run-v18.sh  run-v18b.sh  vast.ps1
webui/: app.js  evo_app.js  evo_renderer.js  evolution.html  index.html  panels.js  renderer.js  styles.css
