[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "organism-mvp"
version = "0.1.0"
description = "Minimal brain-inspired organism simulator and learner."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "numpy",
  "torch",
  "uvicorn",
]
